--- a/.github/workflows/gen-md-files.yml
+++ b/.github/workflows/gen-md-files.yml
@@ -12,9 +12,9 @@ jobs:
       run: make all
     - name: Commit files
       run:
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git commit -m "Add changes" -a
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com";
+        git config --local user.name "github-actions[bot]";
+        git commit -m "Autoadd new md files" -a;
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
