--- a/.github/workflows/check-english.yml
+++ b/.github/workflows/check-english.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - name: Check spelling
         id: spell_check
-        uses: mnahinkhan/writegood-action@v1
+        uses: mnahinkhan/writegood-action
