Use SHA1 ref for writegood-check action

--- a/.github/workflows/check-english.yml
+++ b/.github/workflows/check-english.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - name: Check spelling
         id: spell_check
-        uses: mnahinkhan/writegood-action
+        uses: mnahinkhan/writegood-action@37f3a35
