Checkout code before write-good check

--- a/.github/workflows/check-english.yml
+++ b/.github/workflows/check-english.yml
@@ -1,10 +1,14 @@
 on: [push]
 
 jobs:
+
   check_spell_job:
     runs-on: ubuntu-latest
     name: Check English prose
     steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
       - name: Check spelling
         id: spell_check
         uses: mnahinkhan/writegood-action@master
