Try fixing gen-md GitHub action

--- a/.github/workflows/gen-md-files.yml
+++ b/.github/workflows/gen-md-files.yml
@@ -19,10 +19,10 @@ jobs:
         git add *.md;
         git commit -m "Autoadd new md files";
     - name: Push changes
-      - if: steps.commit_step.outcome == 'success'
-          uses: ad-m/github-push-action@master
-          with:
+      if: steps.commit_step.outcome == 'success'
+        uses: ad-m/github-push-action@master
+        with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
             branch: ${{ github.ref }}
-      - if: steps.commit_step.outcome != 'success'
+      if: steps.commit_step.outcome != 'success'
         run: exit 0
