Try fixing gen-md GitHub action

--- a/.github/workflows/gen-md-files.yml
+++ b/.github/workflows/gen-md-files.yml
@@ -20,9 +20,10 @@ jobs:
         git commit -m "Autoadd new md files";
     - name: Push changes
       if: steps.commit_step.outcome == 'success'
-        uses: ad-m/github-push-action@master
-        with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            branch: ${{ github.ref }}
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.ref }}
+    - name: Don't push changes
       if: steps.commit_step.outcome != 'success'
-        run: exit 0
+      run: exit 0
